--- a/Client/package.json
+++ b/Client/package.json
@@ -16,7 +16,8 @@
     "lucide-vue-next": "^0.563.0",
     "radix-vue": "^1.9.17",
     "tailwind-merge": "^3.4.0",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
